--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,7 @@ body {
 /* ========= NAVBAR ========== */
 
 .navbar {
-    background-color: black;
-    opacity: 0.8;
+    background-color: #333333;
     display: flex;
     padding: .5em;
 }
@@ -30,8 +29,8 @@ body {
     padding: 0em 1em;
 }
 
-.navbar .left img {
-    height: 40px;
+.navbar .left img 
+{    height: 40px;
     width: 40px;
 }
 
@@ -49,5 +48,100 @@ body {
 
 .navbar a:active {
     color: #877171;
+}
+
+/* Login Box Stylings */
+
+/* Unopened lightbox */
+.lightbox {
+  display: none;
+  text-align: center;
+  
+}
+
+/* Opened lightbox */
+.lightbox:target {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Lightbox content */
+.lightbox .input-wrapper {
+  width: 30rem;
+  height: 20rem;
+  position: relative;
+  background-color: white;
+}
+
+.lightbox .login-title {
+    background-color: #333333;
+    color: white;
+    width: 430px;
+    height: 40px;
+    padding: 25px;
+}
+
+.lightbox form input {
+    border: transparent;
+    width: 50%;
+    height: 2rem;
+    margin: 15px;
+    border-bottom: 1px solid grey;
+}
+
+*:focus {
+    outline: none;
+}
+
+.lightbox form button {
+    width: 30%;
+    height: 3rem;
+    border: transparent;
+}
+
+.lightbox form button:focus {
+    background-color: lightgrey;
+}
+
+
+/* Close button */
+.lightbox .close {
+  position: relative;
+  display: block;
+}
+
+.lightbox .close::after {
+  right: -1rem;
+  top: -1rem;
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  display: flex;
+  z-index: 1;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+  border-radius: 50%;
+  color: white;
+  content: "×";
+  cursor: pointer;
+}
+
+/* Lightbox overlay */
+.lightbox .close::before {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(0,0,0,.7);
+  content: "";
+  cursor: default;
 }
 
